# git-black

./: LICENSE  README.md  add_line.py  black-candidates.sh  change_tests.py  pyproject.toml  renovate.json
src/: git_black.py  main.py
src/git_black/: __init__.py  groups.j2.html
tests/: change_tests.py  test_git_black.py
