[tool.poetry]
name = "git-black"
version = "0.1.0"
description = ""
authors = ["Andy Teijelo <ateijelo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
gitpython = "^3.1.2"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
